# copilot-orchestrator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
copilot_orchestrator/application/services/: context_builder_service.py  fallback_service.py  generation_service.py  query_intake_service.py  retrieval_strategy_service.py  session_service.py
copilot_orchestrator/application/use_cases/: run_orchestrator.py
copilot_orchestrator/core/: config.py  logger.py
copilot_orchestrator/domain/entities/: action.py  citation.py  message.py  orchestration_result.py  query.py  retrieval_result.py  session.py  token_usage.py
copilot_orchestrator/domain/enums/: __init__.py  action_domain.py  action_type.py  ecommerce_action_type.py  intent_type.py  message_role.py  retrieval_mode.py
copilot_orchestrator/domain/ports/: llm_provider.py  retriever_gateway.py  session_repository.py  telemetry_client.py
copilot_orchestrator/infrastructure/ecommerce/: base.py  factory.py  mock_client.py
copilot_orchestrator/infrastructure/llm/: openai_client.py
copilot_orchestrator/infrastructure/retrieval/: data_layer_client.py  mcp_retriever.py  mock_retriever.py
copilot_orchestrator/infrastructure/sessions/: in_memory_session_store.py  redis_repository.py
copilot_orchestrator/infrastructure/telemetry/: langfuse_adapter.py  otel_adapter.py  structured_logger.py
copilot_orchestrator/orchestration/: graph.py  state.py  telemetry_utils.py
docs/: architecture.md
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md
tests/integration/: test_action_routing.py  test_greeting_routing.py  test_streaming.py
tests/unit/: test_foundation.py
(+45 files in other folders)
